<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.sqli.cleancodeformation.presentation.viewmodel.GetUserDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frag2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="75dp"
        tools:context=".Fragment2">

        <androidx.cardview.widget.CardView
            android:id="@+id/CardViewProfilePicById"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="75dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/usernameById"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread">

            <ImageView
                android:id="@+id/profilePicById"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/usernameById"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usernameSample"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/tv_res_job"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CardViewProfilePicById" />


        <TextView
            android:id="@+id/tv_res_country"
            android:layout_width="125dp"
            android:layout_height="35dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/countrySample"
            app:layout_constraintBottom_toTopOf="@+id/tv_res_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_res_job" />

        <TextView
            android:id="@+id/tv_res_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobSample"
            android:textColor="#FF3D00"
            app:layout_constraintBottom_toTopOf="@+id/tv_res_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameById" />

        <TextView
            android:id="@+id/tv_res_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/descSample"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_res_country" />

        <View
            android:id="@+id/view"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_res_desc" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_loc"
            app:layout_constraintBottom_toTopOf="@+id/tv_res_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/telephone"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toTopOf="@+id/tv_res_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_res_city" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone"
            android:src="@drawable/ic_phone2"
            app:layout_constraintBottom_toTopOf="@+id/tv_res_tel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_res_phone" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email"
            android:src="@drawable/ic_email"
            app:layout_constraintBottom_toTopOf="@+id/tv_res_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_res_tel" />

        <TextView
            android:id="@+id/tv_res_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/citySample"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tv_res_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephoneSample"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/tv_res_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneSample"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/tv_res_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailSample"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>